# pulseboard-antigravity-demo

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pulseboard.db  pyproject.toml
.github/workflows/: ci.yml
docs/walkthroughs/: 001-local-run.md
src/pulseboard/: database.py  main.py
src/pulseboard/api/: charts.py  points.py
src/pulseboard/tests/: test_main.py
src/pulseboard/web/static/css/: styles.css
src/pulseboard/web/static/js/: app.js
src/pulseboard/web/templates/: index.html
