[project]
name = "pulseboard"
version = "0.1.0"
description = "A professional Python-based web visualization app demo"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
    "jinja2>=3.1.3",
]

[dependency-groups]
dev = [
    "pytest>=8.1.1",
    "ruff>=0.3.5",
    "pre-commit>=3.7.0",
    "httpx>=0.28.1",
]

[tool.ruff]
line-length = 88
target-version = "py310"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
